--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     tools:context=".ZyqLoginActivity">
+  <!--  <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
+
+    <TextView
+        android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:layout_gravity="center"
+    android:textColor="@android:color/white"
+    android:textSize="20sp"
+    android:textStyle="bold" />
+</android.support.v7.widget.Toolbar>-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
