--- a/app/src/main/res/layout/fg4.xml
+++ b/app/src/main/res/layout/fg4.xml
@@ -5,10 +5,9 @@
     android:gravity="center"
     android:orientation="vertical">
     <ImageView
-        android:id="@+id/first_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:id="@+id/head_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/image" />
     <LinearLayout
