--- a/app/src/main/res/layout/drawer.xml
+++ b/app/src/main/res/layout/drawer.xml
@@ -21,32 +21,6 @@
             android:background="#FFFFFF">
             <!--四个部分都一样：ImageView + TextView-->
             <RelativeLayout
-                android:id="@+id/first_layout"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:id="@+id/first_image"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@drawable/ic_wenzhang" />
-                    <TextView
-                        android:id="@+id/first_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="5dp"
-                        android:text="主页"
-                        android:textColor="#7597B3" />
-                </LinearLayout>
-            </RelativeLayout>
-            <RelativeLayout
                 android:id="@+id/second_layout"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -61,14 +35,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/ic_xiezuo" />
+                        android:src="@drawable/ic_bianqian" />
                     <TextView
                         android:id="@+id/second_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="5dp"
-                        android:text="创作"
+                        android:text="作品"
                         android:textColor="#7597B3" />
                 </LinearLayout>
             </RelativeLayout>
@@ -88,7 +62,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/ic_geren"
+                        android:src="@drawable/ic_xiezuo"
                         />
                     <TextView
                         android:id="@+id/third_text"
@@ -96,7 +70,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="5dp"
-                        android:text="创作"
+                        android:text="写作"
                         android:textColor="#7597B3" />
                 </LinearLayout>
             </RelativeLayout>
@@ -116,7 +90,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/ic_geren"
+                        android:src="@drawable/ic_wode"
                         />
                     <TextView
                         android:id="@+id/fourth_text"
@@ -125,6 +99,32 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="5dp"
                         android:text="我的"
+                        android:textColor="#7597B3" />
+                </LinearLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/first_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/first_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_shezhi" />
+                    <TextView
+                        android:id="@+id/first_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="5dp"
+                        android:text="设置"
                         android:textColor="#7597B3" />
                 </LinearLayout>
             </RelativeLayout>
