--- a/app/src/main/res/layout/fg2.xml
+++ b/app/src/main/res/layout/fg2.xml
@@ -3,6 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="22dp"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:text="我的作品"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
