--- a/app/src/main/res/layout/fg1.xml
+++ b/app/src/main/res/layout/fg1.xml
@@ -23,15 +23,16 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:textSize="20dp"
+            android:text="姓名:"
+            android:textColor="#000000"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:inputType="textPersonName"
-            android:hint="姓名:" />
+            android:layout_centerHorizontal="true" />
         <EditText
             android:id="@+id/nameupdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:textColor="#000000"
             android:ems="10"
             android:inputType="textPersonName" />
     </LinearLayout>
@@ -45,16 +46,17 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:textSize="20dp"
+            android:text="性別:"
+            android:textColor="#000000"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:inputType="textPersonName"
-            android:hint="性别:" />
+            android:layout_centerHorizontal="true" />
         <Spinner
             android:id="@+id/spin_sex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:entries="@array/sex"
             android:prompt="@string/sex_value"
+            android:textColor="#000000"
             android:spinnerMode="dialog" />
     </LinearLayout>
     <LinearLayout
@@ -67,15 +69,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:text="生日:"
+            android:textColor="#000000"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:inputType="textPersonName"
-            android:hint="生日:" />
+            android:layout_centerHorizontal="true"/>
         <Spinner
             android:id="@+id/spin_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:entries="@array/year"
+            android:textColor="#000000"
             android:prompt="@string/year_value"
             android:spinnerMode="dialog" />
         <Spinner
@@ -84,6 +87,7 @@
             android:layout_height="wrap_content"
             android:entries="@array/month"
             android:prompt="@string/month_value"
+            android:textColor="#000000"
             android:spinnerMode="dialog" />
         <Spinner
             android:id="@+id/spin_day"
@@ -91,6 +95,7 @@
             android:layout_height="wrap_content"
             android:entries="@array/day"
             android:prompt="@string/day_value"
+            android:textColor="#000000"
             android:spinnerMode="dialog" />
     </LinearLayout>
     <LinearLayout
@@ -101,13 +106,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:text="签名:"
+            android:textColor="#000000"
             android:layout_marginLeft="60dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:inputType="textPersonName"
-            android:hint="签名:" />
+            android:layout_centerHorizontal="true"/>
         <EditText
             android:id="@+id/autographupdate"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -120,6 +126,7 @@
         android:gravity="center"
         android:id="@+id/save"
         android:text="保存"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
