--- a/app/src/main/res/layout/fg4.xml
+++ b/app/src/main/res/layout/fg4.xml
@@ -10,34 +10,41 @@
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/image" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
             android:text="账号:"
-            android:textSize="22sp"/>
+            android:textColor="#000000"
+            android:textSize="22sp" />
+
         <TextView
             android:id="@+id/account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="账号"
-            android:textSize="22sp"/>
+            android:textColor="#000000"
+            android:textSize="22sp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="姓名:"
+            android:textColor="#000000"
             android:layout_marginLeft="100dp"
             android:textSize="22sp"/>
         <TextView
@@ -46,18 +53,20 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="姓名"
+            android:textColor="#000000"
             android:textSize="22sp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
             android:text="性别:"
+            android:textColor="#000000"
             android:textSize="22sp"/>
         <TextView
             android:id="@+id/sex"
@@ -65,17 +74,19 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="性别"
+            android:textColor="#000000"
             android:textSize="22sp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="生日:"
+            android:textColor="#000000"
             android:layout_marginLeft="100dp"
             android:textSize="22sp"/>
         <TextView
@@ -84,18 +95,20 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="生日"
+            android:textColor="#000000"
             android:textSize="22sp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
             android:text="签名:"
+            android:textColor="#000000"
             android:textSize="22sp"/>
         <TextView
             android:id="@+id/label"
@@ -103,6 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="签名"
+            android:textColor="#000000"
             android:textSize="22sp"/>
     </LinearLayout>
 
