--- a/app/src/main/res/layout/work_item.xml
+++ b/app/src/main/res/layout/work_item.xml
@@ -12,6 +12,7 @@
         <TextView
             android:id="@+id/work_item_title"
             android:layout_width="match_parent"
+            android:textColor="#000000"
             android:layout_height="wrap_content"
             android:textSize="24dp"
             android:text="静夜思"/>
@@ -20,10 +21,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18dp"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:text="你还是曾将那个少年没有一丝丝改变少时诵王企鹅无群二无群其味无穷二无群二无群二无群二无群二无群二无群二无群二群翁无群二二无群二无群二诗书所所所所所所所所所少时诵诗书所所所所所所所所所所所"
-            android:singleLine="true" />
+            android:textColor="#000000"
+            android:text="nihao"
+            android:singleLine="false"
+            android:lines="3"
+            android:ems="10"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,6 +42,7 @@
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
+            android:textColor="#000000"
             android:text="2020-06-09"/>
     </LinearLayout>
 
