--- a/app/src/main/res/layout/work_item.xml
+++ b/app/src/main/res/layout/work_item.xml
@@ -11,21 +11,20 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/work_item_title"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:textColor="#000000"
             android:layout_height="wrap_content"
             android:textSize="24dp"
             android:text="静夜思"/>
         <TextView
             android:id="@+id/work_item_content"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:textSize="18dp"
             android:textColor="#000000"
             android:text="nihao"
             android:singleLine="false"
-            android:lines="3"
-            android:ems="10"/>
+            android:lines="3" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
