--- a/app/src/main/res/layout/work_item.xml
+++ b/app/src/main/res/layout/work_item.xml
@@ -2,49 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="30dp"
-    android:orientation="horizontal">
+    android:layout_marginTop="100dp"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="vertical">
         <TextView
             android:id="@+id/work_item_title"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:textColor="#000000"
+            android:gravity="center"
             android:layout_height="wrap_content"
             android:textSize="24dp"
             android:text="静夜思"/>
         <TextView
             android:id="@+id/work_item_content"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18dp"
             android:textColor="#000000"
             android:text="nihao"
-            android:singleLine="false"
-            android:lines="3" />
+            android:singleLine="false" />
     </LinearLayout>
-    <LinearLayout
+    <TextView
+        android:id="@+id/work_item_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/work_item_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:singleLine="true"
-            android:textColor="#000000"
-            android:text="2020-06-09"/>
-    </LinearLayout>
-
-
-
+        android:textColor="#000000"
+        android:gravity="right"
+        android:text="2020-06-09"/>
 </LinearLayout>
