--- a/app/src/main/res/layout/work_item.xml
+++ b/app/src/main/res/layout/work_item.xml
@@ -4,6 +4,15 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="100dp"
     android:orientation="vertical">
+    <TextView
+        android:id="@+id/work_item_id"
+        android:layout_width="match_parent"
+        android:textColor="#000000"
+        android:gravity="left"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:visibility="gone"
+        android:text="静夜思"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,7 +21,7 @@
             android:id="@+id/work_item_title"
             android:layout_width="match_parent"
             android:textColor="#000000"
-            android:gravity="center"
+            android:gravity="left"
             android:layout_height="wrap_content"
             android:textSize="24dp"
             android:text="静夜思"/>
@@ -21,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18dp"
+            android:gravity="left"
             android:textColor="#000000"
             android:text="nihao"
             android:singleLine="false" />
