--- a/app/src/main/res/layout/activity_register3.xml
+++ b/app/src/main/res/layout/activity_register3.xml
@@ -20,7 +20,7 @@
         android:id="@+id/inputname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="输入您的昵称(不能为空) 格式为：2000-01-01"
+        android:hint="输入您的昵称(不能为空)"
         android:layout_below="@+id/text1"
         />
     <TextView
@@ -55,15 +55,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rgd"
-        android:text="您的生日"
+        android:text="您的生日 "
         android:textSize="30sp"
+        />
+    <TextView
+        android:id="@+id/text7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/text4"
+        android:layout_below="@id/rgd"
+        android:paddingTop="15dp"
+        android:text="格式为：2000-01-01"
         />
     <EditText
         android:id="@+id/inputbirth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="输入您的生日(不能为空)"
-
         android:layout_below="@+id/text4"
         />
     <TextView
